@@ -114,24 +114,44 @@ S3method(pdMatrix,pdIdnot)
 S3method(solve,pdIdnot)
 S3method(summary,pdIdnot)
 
+S3method(fix.family.link,family)
+S3method(fix.family.link,extended.family)
+S3method(fix.family.link,general.family)
 S3method(smooth.construct,ad.smooth.spec)
-S3method(smooth.construct,ps.smooth.spec)
-S3method(smooth.construct,cp.smooth.spec)
 S3method(smooth.construct, cc.smooth.spec)
+S3method(smooth.construct,cp.smooth.spec)
 S3method(smooth.construct, cr.smooth.spec)
+S3method(smooth.construct, cs.smooth.spec)
+S3method(smooth.construct,ds.smooth.spec)
+S3method(smooth.construct, fs.smooth.spec)
+S3method(smooth.construct, mrf.smooth.spec)
+S3method(smooth.construct,ps.smooth.spec)
+S3method(smooth.construct, re.smooth.spec)
+S3method(smooth.construct,so.smooth.spec)
+S3method(smooth.construct,sos.smooth.spec)
 S3method(smooth.construct, tp.smooth.spec)
 S3method(smooth.construct, tensor.smooth.spec)
-S3method(smooth.construct, cs.smooth.spec)
+S3method(smooth.construct, t2.smooth.spec)
 S3method(smooth.construct, ts.smooth.spec)
 
-
-S3method(Predict.matrix,cs.smooth)
-S3method(Predict.matrix,ts.smooth)
-S3method(Predict.matrix,pspline.smooth)
 S3method(Predict.matrix,cr.smooth)
+S3method(Predict.matrix,cs.smooth)
 S3method(Predict.matrix,cyclic.smooth)
-S3method(Predict.matrix,tensor.smooth)
+S3method(Predict.matrix,cpspline.smooth)
+S3method(Predict.matrix,duchon.spline)
+S3method(Predict.matrix,fs.interaction)
+S3method(Predict.matrix,mrf.smooth)
+S3method(Predict.matrix,pspline.smooth)
+S3method(Predict.matrix,random.effect)
 S3method(Predict.matrix,tprs.smooth)
+S3method(Predict.matrix,ts.smooth)
+S3method(Predict.matrix,tensor.smooth)
+S3method(Predict.matrix,t2.smooth)
+S3method(Predict.matrix,soap.film)
+S3method(Predict.matrix,sf)
+S3method(Predict.matrix,sw)
+S3method(Predict.matrix,sos.smooth)
+
 
 S3method(spasm.construct,cus)
 S3method(spasm.sp,cus)
