@@ -20,6 +20,9 @@
 
 *** mvn family for multivariate normal additive models.
 
+* 'gam.vcomp' bug fix. Computed intervals for families with fixed scale 
+   parameter were too wide. 
+
 * With REML/ML smoothness selection in gam an extra covariance matrix 'Vc'
   is now computed which allows for smoothing parameter uncertainty. See
   the 'unconditional' arguments to 'predict.gam' and 'plot.gam' to use this. 
